<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id">DownloadNotificationId</string>
    <string name="notification_channel_name" translatable="true">DownloadApp</string>
    <string name="notification_channel_id_low">DownloadNotificationIdWithLowImportance</string>
    <string name="notification_channel_name_low" translatable="true">DownloadAppNotification</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_text">Select the file you want to download or enter the download link</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="glide_radio_title">Glide - Image Loading Library by BumpTech</string>
    <string name="loadApp_radio_title">Load App - Current repository by Udacity</string>
    <string name="retrofit_radio_title">Retrofit - Type-safe HTTP clint for Android and Java by Square, inc</string>
    <string name="details">Show Details</string>
    <string name="download_link">Download Link</string>
    <string name="ok">OK</string>
    <string name="status">Status:</string>
    <string name="name">Name:</string>
    <string name="succeed">Succeed</string>
    <string name="failed">Failed</string>
    <string name="the_download_did_not_complete">There is no data because the download did not complete</string>
    <string name="cancelled">Cancelled</string>
    <string name="no_name">No Name</string>
</resources>
