<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/content_detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">


    <TextView
        android:id="@+id/download_status_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="500dp"
        android:text="@string/cancelled"
        tools:text="@string/download" />

    <TextView
        android:id="@+id/status_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status" />

    <TextView
        android:id="@+id/download_file_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="465dp"
        android:text="@string/no_name"
        tools:text="@string/download" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/file_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/download_text" />

    <Button
        android:id="@+id/details_ok_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="navigateBackToMain"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/details_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/details"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/file_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/file_name_tv" />

    <TextView
        android:id="@+id/details_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/download_text"
        android:text="@string/the_download_did_not_complete"
        />

</androidx.constraintlayout.motion.widget.MotionLayout>